--- a/journey/src/styles/components/_bootstrap.scss
+++ b/journey/src/styles/components/_bootstrap.scss
@@ -49,12 +49,17 @@
   height: auto;
   min-height: 100%;
   border-radius: 0;
-  background-color: white;
+  background-color: #fff;
+  color: #000;
 }
 
 .modal-header {
-background: white
+  background: #fff;
+  color: #000;
+  border-bottom: 1px solid #e7e7e7;
 }
+
 .modal-body {
- background: white
+  background: #fff;
+  color: #000;
 }
